--- a/style.css
+++ b/style.css
@@ -3,3 +3,42 @@ body {
   height: 100%;
   margin: 0;
 }
+h1{
+text-align: center;
+}
+
+nav{
+  text-align: center;
+}
+
+nav a{
+  background-color: grey;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+figure{
+  align-items: center;
+  text-align: center;
+}
+
+#featured-property > p{
+  text-align: center;
+  width: 800px;
+  margin: auto;
+}
+
+
+
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  background-color: red;
+  padding: 10px;
+  }
+
+.grid-item{
+  padding: 10px;
+  text-align: center;
+}
